# 64-bit-Zygote

./: .gitignore  CELL.md  CONSTRAINTS.md  EVOLUTION.md  GENOME.md  LAB_NOTES.md  MILESTONES.md  PHENOMENA.md  QUESTIONS.md  README.md  ROADMAP.md  ZYGOTE_LAWS.md  ZYGOTE_LAWS_PROJECTED.md  ZYGOTE_SPEC.md  ZYGOTE_THESIS.md  bench_check.py  check_e038.ps1  extract_e038.py  extract_e038_fine.py  extract_e038_hi.py  extract_e038_mid.py  extract_e038_traj.py  run_e038_sweep.ps1  zmon.bat
zmon/: Cargo.toml
zmon/src/: main.rs
zygote-runtime/: Cargo.toml  out2.txt  out3.txt  stderr.txt  warn_err.txt
zygote-runtime/cells/: Makefile  common.inc  fifo.inc  logger.asm  loopback.asm  memory.asm  offset4.asm  relay.asm  selfdestruct.asm  sensor.asm
zygote-runtime/genomes/: competing_energy.json  competing_loops.json  cost_mutation_surface.json  cost_sweep.json  cost_tournament.json  cost_tournament_open.json  cost_tournament_tradeoffs.json  default.json  directed_test.json  e035_A_reactive.json  e035_B_memory.json  e035_memory_evolution.json  e036_evolution_of_communication.json  e038_ecosystem_collapse.json  earned_reproduction.json  environmental_shift_v1.json  evolutionary_ascent.json  evolutionary_ascent_fast.json  loop_fork_test.json  loop_test.json  memory_vs_reactive.json  meta_strategy_competition.json  meta_strategy_competition_v2.json  selfdestruct_test.json  shared_bottleneck.json  shared_bottleneck_swapped.json  spawn_test.json  spender_vs_saver.json  uncertainty_selection.json
zygote-runtime/src/: cell.rs  genome.rs  main.rs  observer.rs  runtime.rs  sandbox.rs  (+2 more)
