[package]
name = "zmon"
version = "0.1.0"
edition = "2021"
description = "ZygoteAI Monitor - Text-based live monitor"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"